// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot 1`] = `
<div>
  <div
    class="rdp-calendar"
    id="test"
  >
    <div
      class="rdp-months"
    >
      <div
        class="rdp-month_wrapper"
      >
        <div
          class="rdp-month_caption"
          id="test-caption-0"
        >
          <span
            aria-live="polite"
            class="rdp-caption_label"
            role="status"
          >
            November 2020
          </span>
        </div>
        <div
          aria-labelledby="test-caption-0"
          aria-multiselectable="true"
          class="rdp-month"
          id="test-grid-0"
          role="grid"
        >
          <div
            aria-rowindex="1"
            class="rdp-weekdays"
            role="row"
          >
            <span
              aria-colindex="1"
              aria-label="Sunday"
              class="rdp-weekday"
              role="columnheader"
            >
              Su
            </span>
            <span
              aria-colindex="2"
              aria-label="Monday"
              class="rdp-weekday"
              role="columnheader"
            >
              Mo
            </span>
            <span
              aria-colindex="3"
              aria-label="Tuesday"
              class="rdp-weekday"
              role="columnheader"
            >
              Tu
            </span>
            <span
              aria-colindex="4"
              aria-label="Wednesday"
              class="rdp-weekday"
              role="columnheader"
            >
              We
            </span>
            <span
              aria-colindex="5"
              aria-label="Thursday"
              class="rdp-weekday"
              role="columnheader"
            >
              Th
            </span>
            <span
              aria-colindex="6"
              aria-label="Friday"
              class="rdp-weekday"
              role="columnheader"
            >
              Fr
            </span>
            <span
              aria-colindex="7"
              aria-label="Saturday"
              class="rdp-weekday"
              role="columnheader"
            >
              Sa
            </span>
          </div>
          <div
            class="rdp-weeks"
            role="rowgroup"
          >
            <div
              aria-rowindex="2"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                1
              </div>
              <div
                aria-colindex="2"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                2
              </div>
              <div
                aria-colindex="3"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                3
              </div>
              <div
                aria-colindex="4"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                4
              </div>
              <div
                aria-colindex="5"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                5
              </div>
              <div
                aria-colindex="6"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                6
              </div>
              <div
                aria-colindex="7"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                7
              </div>
            </div>
            <div
              aria-rowindex="3"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                8
              </div>
              <div
                aria-colindex="2"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                9
              </div>
              <div
                aria-colindex="3"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                10
              </div>
              <div
                aria-colindex="4"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                11
              </div>
              <div
                aria-colindex="5"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                12
              </div>
              <div
                aria-colindex="6"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                13
              </div>
              <div
                aria-colindex="7"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                14
              </div>
            </div>
            <div
              aria-rowindex="4"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-selected="true"
                class="rdp-day rdp-focusable rdp-range_start rdp-selected"
                role="gridcell"
                tabindex="0"
              >
                15
              </div>
              <div
                aria-colindex="2"
                aria-selected="true"
                class="rdp-day rdp-focusable rdp-range_middle rdp-selected"
                role="gridcell"
                tabindex="-1"
              >
                16
              </div>
              <div
                aria-colindex="3"
                aria-selected="true"
                class="rdp-day rdp-focusable rdp-range_middle rdp-selected"
                role="gridcell"
                tabindex="-1"
              >
                17
              </div>
              <div
                aria-colindex="4"
                aria-selected="true"
                class="rdp-day rdp-focusable rdp-range_middle rdp-selected"
                role="gridcell"
                tabindex="-1"
              >
                18
              </div>
              <div
                aria-colindex="5"
                aria-selected="true"
                class="rdp-day rdp-focusable rdp-range_end rdp-selected"
                role="gridcell"
                tabindex="-1"
              >
                19
              </div>
              <div
                aria-colindex="6"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                20
              </div>
              <div
                aria-colindex="7"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                21
              </div>
            </div>
            <div
              aria-rowindex="5"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                22
              </div>
              <div
                aria-colindex="2"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                23
              </div>
              <div
                aria-colindex="3"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                24
              </div>
              <div
                aria-colindex="4"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                25
              </div>
              <div
                aria-colindex="5"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                26
              </div>
              <div
                aria-colindex="6"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                27
              </div>
              <div
                aria-colindex="7"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                28
              </div>
            </div>
            <div
              aria-rowindex="6"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                29
              </div>
              <div
                aria-colindex="2"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                30
              </div>
              <div
                aria-colindex="3"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
                tabindex="-1"
              >
                1
              </div>
              <div
                aria-colindex="4"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
                tabindex="-1"
              >
                2
              </div>
              <div
                aria-colindex="5"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
                tabindex="-1"
              >
                3
              </div>
              <div
                aria-colindex="6"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
                tabindex="-1"
              >
                4
              </div>
              <div
                aria-colindex="7"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
                tabindex="-1"
              >
                5
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rdp-nav"
      role="toolbar"
    >
      <button
        aria-controls="test"
        aria-label="Previous Month"
        class="rdp-button_previous"
        name="previous-month"
        type="button"
      >
        <svg
          class="rdp-chevron"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <polygon
            points="15 17.23 9.43 11.5 15 5.76 13.28 4 6 11.5 13.28 19"
          />
        </svg>
      </button>
      <button
        aria-controls="test"
        aria-label="Next Month"
        class="rdp-button_next"
        name="next-month"
        type="button"
      >
        <svg
          class="rdp-chevron"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <polygon
            points="8 18.23 13.57 12.5 8 6.76 9.72 5 17 12.5 9.72 20"
          />
        </svg>
      </button>
    </div>
    <div
      class="rdp-footer"
    >
      <p>
        November 15th, 2020
        –
        November 19th, 2020
      </p>
    </div>
  </div>
</div>
`;

exports[`when a day in the range is clicked when the day is clicked again when a day in the range is clicked again should match the snapshot 1`] = `
<div>
  <div
    class="rdp-calendar"
    id="test"
  >
    <div
      class="rdp-months"
    >
      <div
        class="rdp-month_wrapper"
      >
        <div
          class="rdp-month_caption"
          id="test-caption-0"
        >
          <span
            aria-live="polite"
            class="rdp-caption_label"
            role="status"
          >
            November 2020
          </span>
        </div>
        <div
          aria-labelledby="test-caption-0"
          aria-multiselectable="true"
          class="rdp-month"
          id="test-grid-0"
          role="grid"
        >
          <div
            aria-rowindex="1"
            class="rdp-weekdays"
            role="row"
          >
            <span
              aria-colindex="1"
              aria-label="Sunday"
              class="rdp-weekday"
              role="columnheader"
            >
              Su
            </span>
            <span
              aria-colindex="2"
              aria-label="Monday"
              class="rdp-weekday"
              role="columnheader"
            >
              Mo
            </span>
            <span
              aria-colindex="3"
              aria-label="Tuesday"
              class="rdp-weekday"
              role="columnheader"
            >
              Tu
            </span>
            <span
              aria-colindex="4"
              aria-label="Wednesday"
              class="rdp-weekday"
              role="columnheader"
            >
              We
            </span>
            <span
              aria-colindex="5"
              aria-label="Thursday"
              class="rdp-weekday"
              role="columnheader"
            >
              Th
            </span>
            <span
              aria-colindex="6"
              aria-label="Friday"
              class="rdp-weekday"
              role="columnheader"
            >
              Fr
            </span>
            <span
              aria-colindex="7"
              aria-label="Saturday"
              class="rdp-weekday"
              role="columnheader"
            >
              Sa
            </span>
          </div>
          <div
            class="rdp-weeks"
            role="rowgroup"
          >
            <div
              aria-rowindex="2"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                1
              </div>
              <div
                aria-colindex="2"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                2
              </div>
              <div
                aria-colindex="3"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                3
              </div>
              <div
                aria-colindex="4"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                4
              </div>
              <div
                aria-colindex="5"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                5
              </div>
              <div
                aria-colindex="6"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                6
              </div>
              <div
                aria-colindex="7"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                7
              </div>
            </div>
            <div
              aria-rowindex="3"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                8
              </div>
              <div
                aria-colindex="2"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                9
              </div>
              <div
                aria-colindex="3"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                10
              </div>
              <div
                aria-colindex="4"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                11
              </div>
              <div
                aria-colindex="5"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                12
              </div>
              <div
                aria-colindex="6"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                13
              </div>
              <div
                aria-colindex="7"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                14
              </div>
            </div>
            <div
              aria-rowindex="4"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                15
              </div>
              <div
                aria-colindex="2"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                16
              </div>
              <div
                aria-colindex="3"
                class="rdp-day rdp-focusable rdp-focused"
                role="gridcell"
                tabindex="0"
              >
                17
              </div>
              <div
                aria-colindex="4"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                18
              </div>
              <div
                aria-colindex="5"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                19
              </div>
              <div
                aria-colindex="6"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                20
              </div>
              <div
                aria-colindex="7"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                21
              </div>
            </div>
            <div
              aria-rowindex="5"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                22
              </div>
              <div
                aria-colindex="2"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                23
              </div>
              <div
                aria-colindex="3"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                24
              </div>
              <div
                aria-colindex="4"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                25
              </div>
              <div
                aria-colindex="5"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                26
              </div>
              <div
                aria-colindex="6"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                27
              </div>
              <div
                aria-colindex="7"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                28
              </div>
            </div>
            <div
              aria-rowindex="6"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                29
              </div>
              <div
                aria-colindex="2"
                class="rdp-day rdp-focusable"
                role="gridcell"
                tabindex="-1"
              >
                30
              </div>
              <div
                aria-colindex="3"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
                tabindex="-1"
              >
                1
              </div>
              <div
                aria-colindex="4"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
                tabindex="-1"
              >
                2
              </div>
              <div
                aria-colindex="5"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
                tabindex="-1"
              >
                3
              </div>
              <div
                aria-colindex="6"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
                tabindex="-1"
              >
                4
              </div>
              <div
                aria-colindex="7"
                aria-hidden="true"
                class="rdp-day rdp-hidden rdp-outside"
                role="gridcell"
                tabindex="-1"
              >
                5
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rdp-nav"
      role="toolbar"
    >
      <button
        aria-controls="test"
        aria-label="Previous Month"
        class="rdp-button_previous"
        name="previous-month"
        type="button"
      >
        <svg
          class="rdp-chevron"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <polygon
            points="15 17.23 9.43 11.5 15 5.76 13.28 4 6 11.5 13.28 19"
          />
        </svg>
      </button>
      <button
        aria-controls="test"
        aria-label="Next Month"
        class="rdp-button_next"
        name="next-month"
        type="button"
      >
        <svg
          class="rdp-chevron"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <polygon
            points="8 18.23 13.57 12.5 8 6.76 9.72 5 17 12.5 9.72 20"
          />
        </svg>
      </button>
    </div>
    <div
      class="rdp-footer"
    >
      <p>
        Please pick the first day.
      </p>
    </div>
  </div>
</div>
`;
